--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.17.0",
     "antd": "^5.12.2",
     "axios": "^1.9.0",
     "js-cookie": "^3.0.5",
